admin-ui 기본 템플릿 추가
