# service/src/controllers/UserController.ts
@@ -1,3 +1,4 @@
+import { UserSchema } from '@app/modules/datasource/Entities';
 import { UserService } from '@app/services/UserService';
 import { BaseResponse } from '@app/types/response';
 import passport from 'passport';
@@ -20,10 +21,10 @@ import {
 
 @Route('user')
 @Tags('User')
-@Response<{ message: string; details: { [name: string]: unknown } }>(
-  422,
-  'Validation Failed'
-)
+@Response<{
+  message: string;
+  details: { [name: string]: { value: string; message: string } };
+}>(422, 'Validation Failed')
 @Response<{ message: string }>(401, 'Unauthorized')
 @Response<{ message: string }>(500, 'Unhandled')
 export class UserController extends Controller {
@@ -41,8 +42,37 @@ export class UserController extends Controller {
     };
   }
 
-  @Delete('/{idx}')
-  public async deleteDataset(@Path() idx: number): Promise<boolean> {
-    return true;
+  @Get('/list')
+  public async getUsers(
+    @Query() offset: number,
+    @Query() limit: number
+  ): Promise<BaseResponse<UserSchema[], { total: number }>> {
+    const service = new UserService();
+
+    const result = await service.getUsers(offset, limit);
+
+    return {
+      code: 'server:success',
+      result: result.users,
+      metadata: {
+        total: result.total,
+      },
+    };
   }
+
+  @Delete('/{idx}')
+  public async deleteUser(
+    @Path() idx: number
+  ): Promise<BaseResponse<{ deletedCnt: number }, undefined>> {
+    const service = new UserService();
+    const result = await service.deleteUserByIndex([idx]);
+    return {
+      code: 'server:success',
+      result: {
+        deletedCnt: result,
+      },
+    };
+  }
+
+  public async deleteUsers() {}
 }
